--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ body {
 
   footer {
     background-color: black;
-    color: white;
+    color: rgb(239, 239, 239);
     position:fixed;
     bottom: 0;
     width: 100%;
